--- a/src/assets/scss/common.scss
+++ b/src/assets/scss/common.scss
@@ -1,7 +1,11 @@
+@import "variables";
+@import "lib";
+
 html, body {
   margin: 0;
   padding: 0;
   height: 100%;
+  font-size: $base-font-size;
 }
 
 body {
@@ -9,7 +13,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -webkit-tap-highlight-color: transparent;
   -webkit-overflow-scrolling: touch;
-  font-size: 12px;
+  font-size: $base-font-size;
   background-color: #f4f5f5;
   text-rendering: optimizeLegibility;
 }
@@ -105,4 +109,17 @@ dd {
 ul,
 ol {
   list-style: none;
+}
+
+.clearfix:after {
+  content: ".";
+  display: block;
+  height: 0;
+  clear: both;
+  visibility: hidden;
+}
+
+.container {
+  @include px2rem(max-width, $base-width);
+  margin: 0 auto;
 }
