--- a/src/assets/scss/variables.scss
+++ b/src/assets/scss/variables.scss
@@ -5,3 +5,9 @@ $base-width: 1200px !default;
 $base-zIndex: 9 !default;
 
 $base-head-height: 60px !default;
+
+$color-red: #ff4949 !default;
+
+$color-gray: #bfcbd9 !default;
+
+$color-blue: #20a0ff !default;
