--- a/src/assets/scss/variables.scss
+++ b/src/assets/scss/variables.scss
@@ -6,8 +6,12 @@ $base-zIndex: 9 !default;
 
 $base-head-height: 60px !default;
 
+$base-aside-width: 200px !default;
+
 $color-red: #ff4949 !default;
 
 $color-gray: #bfcbd9 !default;
 
 $color-blue: #20a0ff !default;
+
+$color-white: #fff !default;
